Error/Implementation/Example/Pods/Target Support Files/TuringErrorInterface/TuringErrorInterface.modulemap
framework module TuringErrorInterface {
  umbrella header "TuringErrorInterface-umbrella.h"

  export *
  module * { export * }
}
